<resources>
    <string name="app_name">MHK</string>

    <string name="organization">Copyright © 天津翰林新语教育科技有限公司 All Rights Reserved</string>

    <string-array name="request_permission_reason">
        <item>为了您更好的使用播放语音、录制音频等功能，需要您同意以下这些权限：</item>
        <item>1. 访问您设备上的内容和文件</item>
        <item>2. 允许访问麦克风</item>
        <item>3. 获取手机状态信息</item>
    </string-array>
    <string name="permission">为了您正常使用，需要您同意录音、读取手机存储等权限</string>
    <string name="exam">考试</string>
    <string name="notice">提示</string>
    <string name="is_exits">是否退出登录</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>

    <!--layout-button-->
    <string name="filter">筛选</string>

    <!-- activity_login-->
    <string name="login">登录</string>
    <string name="please_input_user_name">请输入用户名</string>
    <string name="please_input_pwd">请输入密码</string>
    <string name="forget_psd">忘记密码</string>
    <string name="please_input_votify_code">请输入验证码</string>
    <string name="votify_code_err">验证码输入错误，请重新输入</string>
    <string name="username_unregister">该用户名尚未注册，请输入正确的用户名</string>
    <string name="psd_err">密码输入错误，请重新输入</string>
    <string name="logining">登录中...</string>
    <string name="register_name_digits">
        0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ
    </string>
    <string name="ID_card_digits">
        0123456789xX
    </string>

    <!--activity_found_psd-->
    <string name="please_input_ID_card">请输入身份证号</string>
    <string name="please_input_new_psd">请输入新密码</string>
    <string name="please_input_new_psd_again">请重新输入新密码</string>
    <string name="psd_requirements">请输入6-16位数字或字母为密码</string>
    <string name="ID_card_err">身份证号输入错误，请重新输入</string>
    <string name="psd_different">两次密码输入不一致，请重新输入</string>

    <!--dialog_net-->
    <string name="net_error">您的网络不给力啊，快去查看下手机设置吧</string>

    <!--main-->
    <string name="exercise">练习</string>
    <string name="operation">作业</string>
    <string name="mine">我的</string>

    <!--fragment_mine-->
    <string name="grade">答题成绩</string>
    <string name="feedback">意见反馈</string>
    <string name="terms_of_service">服务条款</string>
    <string name="about_us">关于我们</string>
    <string name="version_code">版本号：</string>
    <string name="exit_login">退出登录</string>

    <!--activity_exercise_select-->
    <string name="state_select">状态选择：</string>
    <string name="all_state">全部状态</string>
    <string name="completed">已完成</string>
    <string name="undone">未完成</string>
    <string name="question_type">题型选择：</string>
    <string name="listening">听力</string>
    <string name="written">书面表达</string>
    <string name="reading_comprehension">阅读理解</string>
    <string name="oral_listening">口语</string>
    <string name="composition">作文</string>
    <string name="whole_truth_test">综合试题</string>
    <string name="exercise_number">练习次数：</string>
    <string name="low_top">从高到低排序</string>
    <string name="top_low">从低到高排序</string>

    <!--activity_test_score-->
    <string name="test_score">试卷分数</string>

    <!--activity_operation_select-->
    <string name="positive_time">时间正序</string>
    <string name="reverse_time">时间倒序</string>
    <string name="time_sort">时间排序：</string>

    <!--activity_feedback-->
    <string name="input_description">请输入简述</string>
    <string name="input_description_detail">请输入详细</string>
    <string name="feed_back_success">您好，已收到您的反馈。感谢您的建议，我们会认真改进。</string>

    <!--activity_exercise-->
    <string name="exercise_more">（随机出题，可多次练习）</string>
    <string name="next_step">下一步</string>
    <string name="exam_complete">考试完成</string>
    <string name="finished">完成</string>
    <string name="next_question">下一题</string>
    <string name="commit_to_next_question">提交进入下一题</string>
    <string name="pressed_speaking">按下说话</string>
    <string name="playing_content">播放内容</string>
    <string name="see_demo">查看范文</string>
    <string name="commit_answer">提交答卷</string>
    <string name="upload_pic">拍照并上传</string>

    <!--dialog_download-->
    <string name="stop">停止</string>
    <string name="resume">恢复</string>
    <string name="start">开始</string>
    <string name="loading_paper">加载试卷中，请稍等...</string>
    <string name="reload">若长时间无下载进度，请点击重新下载</string>
    <string name="redownload">重新下载</string>

    <!--activity_check_info-->
    <string name="person_info">个人信息</string>
    <string name="name">姓名</string>
    <string name="nation">民族</string>
    <string name="phone_num">手机号</string>
    <string name="id_card">身份证号</string>
    <string name="is_me">是我本人</string>
    <string name="not_me">不是我</string>

    <string name="exam_request">我已按照要求开启飞行模式连接无线网络并退出通讯软件登录状态保证考试顺利进行一旦违反影响考试后果自负</string>

    <!--activity_service_terms-->
    <string name="service_terms">服务条款</string>
    <string-array name="terms_details">
        <item>尊敬的用户，欢迎您注册成为本APP用户。在注册前请您仔细阅读如下服务条款：</item>
        <item>本服务协议双方为本APP与本APP用户，本服务协议具有合同效力。</item>
        <item>您确认本服务协议后，本服务协议即在您和本APP之间产生法律效力。请您务必在注册之前认真阅读全部服务协议内容。</item>
        <item>您点击协议正本下方的"注册"按钮并按照本APP注册程序成功注册为用户，您的行为则表示您同意并签署了本服务协议：</item>
        <item>1. 本APP各项服务的所有权、运作权及最终解释权归本APP拥有。</item>
        <item>2. 本APP有权在必要时修改服务条款。</item>
        <item>3. 本APP一定不会在未经合法用户授权时公开、编辑或透露其注册资料及保存在本APP中的非公开内容，除非有法律许可要求。</item>
        <item>4. 本APP不担保服务不会受中断，对服务的及时性，安全性，出错发生都不作担保，但会在能力范围内，避免出错。</item>
        <item>5. 本APP对任何直接、间接、偶然、特殊及继起的损害不负责任。</item>
        <item>6. 本APP有判定用户的行为是否符合本APP服务条款的要求和精神的权利，如果用户违背本APP服务条款的规定，本APP有权中断其服务的帐号。</item>
        <item>7.用户同意保障和维护本APP全体成员的利益，负责支付由用户使用超出服务范围引起的律师费用，违反服务条款的损害补偿费用等。</item>
    </string-array>

    <!--dialog_daclaration-->
    <string-array name="declaration">
        <item>在使用本系统的所有功能之前，请您务必仔细阅读并透彻理解本声明。您可以选择不使用本系统，但如果您使用本系统，您的使用行为将被视为对本声明全部内容的认可：</item>
        <item>1. 一切移动客户端用户在下载并浏览APP软件时均被视为已经仔细阅读本条款并完全同意。均被视为自愿接受本网站相关声明和用户服务协议的约束。</item>
        <item>2. 本系统向考生提供的考试内容的版权和知识产权，全部由本次考试举办方拥有；未经举办方以书面表示同意，任何人不得以各种形式复制、散布、出售、出版、广播、转播试卷内容信息。</item>
        <item>3. 本系统向考生提供的用户账号及密码只供考生使用。如果考生将账号或密码丢失被盗，应及时重置密码。用户造成的账号失密，应自行承担责任。</item>
        <item>4. 在正式考试前，本APP会开放为期一周的自我模测时间。模测不算正式成绩。但是不参加模测的考生无法获取参加正式考试的资格。</item>
        <item>5. 本次考试为线上考试，考试期间全程录像，以确保考生的利益。</item>
        <item>6. 本次考试所有考生均使用个人设备参加考试，考试期间，由于个人设备硬件故障、网络故障，导致考试无法顺利进行的，APP不承担任何责任。</item>
        <item>7. 本次考试期间，接打电话、接打网络电话、视频通话、发送短消息、发送网络文字或语音消息等会将本APP切换至后台进程的个人行为导致考试中断或数据错误的，APP不承担任何责任。</item>
        <item>8. 除APP注明之服务条款外，其他因不当使用本APP而导致的任何意外、疏忽、合约毁坏、诽谤、版权或其他知识产权侵犯及其所造成的任何损失，APP概不负责，亦不承担任何法律责任。</item>
        <item>9. 对于因不可抗力或因黑客攻击、通讯线路中断等APP不能控制的原因造成的网络服务中断或其他缺陷，导致用户不能正常使用APP，APP不承担任何责任，但将尽力减少因此给用户造成的损失或影响。</item>
        <item>10. 本声明未涉及的问题请参见国家有关法律法规。</item>
        <item>11. 本网站相关声明版权及其修改权、更新权和最终解释权均属APP所有。</item>
        <item>    考生的权利与义务</item>
        <item>1. 考生承诺遵守法律法规、社会主义制度、国家利益、公民合法权益、公共秩序、社会道德风尚和信息真实性等七条底线。</item>
        <item>2. 考生在需输入文字的地方，不得出现违法和不良信息。</item>
        <item>3. 在考后阅卷期间，对含有违法和不良信息的答卷，有权进行取消资格的处理。</item>
        <item>4. 本APP保护考生信息及公民的个人隐私，自觉接受社会监督。</item>
        <item>5. 考生的所有行为必须符合国家法律的规定，如违反国家法律规定和本协议，出现任何纠纷及不良结果。将由行为人独立承担所有责任。</item>
    </string-array>

</resources>
