<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitefff"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_title"
        style="@style/textSize_black131_16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/notice"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_msg"
        style="@style/textSize_black949_14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:paddingStart="51dp"
        android:paddingEnd="51dp"
        android:text="@string/net_error" />

    <Button
        android:id="@+id/confirm_btn"
        style="@style/textSize_whitefff_14"
        android:layout_width="120dp"
        android:layout_height="32dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="31dp"
        android:layout_marginBottom="23dp"
        android:background="@drawable/blue_btn_bg"
        android:text="@string/confirm" />

</LinearLayout>