<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.login.activity.FoundPsdActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="87dp"
        android:src="@drawable/icon_found_psd" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="45dp"
        android:paddingStart="38dp"
        android:paddingEnd="38dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="17dp"
            android:src="@drawable/icon_user"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/user_name_edit"
            style="@style/textSize_gray0B0_15"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:digits="@string/register_name_digits"
            android:gravity="center_vertical"
            android:hint="@string/please_input_user_name"
            android:paddingStart="47dp"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/my_cursor"
            tools:ignore="RtlSymmetry" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_alignParentBottom="true"
            android:background="@color/blueED4" />

    </RelativeLayout>

    <TextView
        android:id="@+id/user_unregister_tv"
        style="@style/textSize_redE90_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="6dp"
        android:text="@string/username_unregister" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:paddingStart="38dp"
        android:paddingEnd="38dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="17dp"
            android:src="@drawable/icon_ID_card"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/ID_card_edit"
            style="@style/textSize_gray0B0_15"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:digits="@string/register_name_digits"
            android:gravity="center_vertical"
            android:hint="@string/please_input_ID_card"
            android:paddingStart="47dp"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/my_cursor"
            tools:ignore="RtlSymmetry" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_alignParentBottom="true"
            android:background="@color/gray9D9" />

    </RelativeLayout>

    <TextView
        android:id="@+id/ID_card_err_tv"
        style="@style/textSize_redE90_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="6dp"
        android:text="@string/ID_card_err" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:paddingStart="38dp"
        android:paddingEnd="38dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="17dp"
            android:src="@drawable/icon_psd"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/new_psd_edit"
            style="@style/textSize_gray0B0_15"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:digits="@string/register_name_digits"
            android:gravity="center_vertical"
            android:hint="@string/please_input_new_psd"
            android:paddingStart="47dp"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/my_cursor"
            tools:ignore="RtlSymmetry" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_alignParentBottom="true"
            android:background="@color/gray9D9" />

    </RelativeLayout>

    <TextView
        android:id="@+id/requirements_tv"
        style="@style/textSize_redE90_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="6dp"
        android:text="@string/psd_requirements" />

</LinearLayout>