<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.login.activity.CheckInfoActivity">

    <com.hlxyedu.mhk.weight.actionbar.XBaseTopBar
        android:id="@+id/xbase_topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:isShowLeft_x="true"
        app:isShowRight_x="false"
        app:middleText_x="@string/person_info" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/item_click_selector"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/textSize_black303_14"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:text="@string/name" />

        <TextView
            android:id="@+id/name_tv"
            style="@style/textSize_black303_14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray8F8" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/item_click_selector"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/textSize_black303_14"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:text="@string/nation" />

        <TextView
            android:id="@+id/nation_tv"
            style="@style/textSize_black303_14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray8F8" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/item_click_selector"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/textSize_black303_14"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:text="@string/phone_num" />

        <TextView
            android:id="@+id/phone_tv"
            style="@style/textSize_black303_14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray8F8" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/item_click_selector"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/textSize_black303_14"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:text="@string/id_card" />

        <TextView
            android:id="@+id/id_card_tv"
            style="@style/textSize_black303_14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray8F8" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="27dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_neg"
                style="@style/textSize_whitefff_13"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="14dp"
                android:background="@drawable/back_left_selector"
                android:text="@string/not_me"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_pos"
                style="@style/textSize_whitefff_13"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="14dp"
                android:background="@drawable/blue_btn_bg"
                android:text="@string/is_me" />

        </RelativeLayout>


    </LinearLayout>

</LinearLayout>