<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitefff"
    android:orientation="vertical"
    tools:context=".ui.login.activity.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="271dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/icon_login_bg" />

        <ImageView
            android:id="@+id/mhk_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="71dp"
            android:src="@drawable/icon_mhk" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mhk_iv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="26dp"
            android:src="@drawable/icon_pic" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:paddingStart="38dp"
        android:paddingEnd="38dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="17dp"
            android:src="@drawable/icon_user"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/user_name_edit"
            style="@style/textSize_gray0B0_15"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:digits="@string/register_name_digits"
            android:gravity="center_vertical"
            android:hint="@string/please_input_user_name"
            android:inputType="phone"
            android:paddingStart="47dp"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/my_cursor"
            tools:ignore="RtlSymmetry" />

        <View
            android:id="@+id/user_name_line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_alignParentBottom="true"
            android:background="@color/blueED4" />

    </RelativeLayout>

    <TextView
        android:id="@+id/user_error_prompt_tv"
        style="@style/textSize_redE90_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="6dp"
        android:text="@string/username_unregister"
        android:visibility="invisible" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:paddingStart="38dp"
        android:paddingEnd="38dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="17dp"
            android:src="@drawable/icon_psd"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/psd_edit"
            style="@style/textSize_gray0B0_15"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="62dp"
            android:background="@null"
            android:digits="@string/register_name_digits"
            android:gravity="center_vertical"
            android:hint="@string/please_input_pwd"
            android:inputType="numberPassword"
            android:paddingStart="47dp"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/my_cursor"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/forget_psd_tv"
            style="@style/textSize_black949_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/forget_psd" />

        <View
            android:id="@+id/psd_line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_alignParentBottom="true"
            android:background="@color/gray9D9" />

    </RelativeLayout>

    <TextView
        android:id="@+id/psd_error_prompt_tv"
        style="@style/textSize_redE90_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="6dp"
        android:text="@string/psd_err"
        android:visibility="invisible" />

    <RelativeLayout
        android:id="@+id/code_error_prompt_rl"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:paddingStart="38dp"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="17dp"
            android:src="@drawable/icon_vertify"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/vertify_edit"
            style="@style/textSize_gray0B0_15"
            android:layout_width="196dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="62dp"
            android:background="@null"
            android:digits="@string/register_name_digits"
            android:gravity="center_vertical"
            android:hint="@string/please_input_votify_code"
            android:paddingStart="47dp"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/my_cursor"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:id="@+id/code_iv"
            style="@style/textSize_black949_14"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="22dp" />

        <View
            android:id="@+id/vertify_line"
            android:layout_width="196dp"
            android:layout_height="2dp"
            android:layout_alignParentBottom="true"
            android:background="@color/gray9D9" />

    </RelativeLayout>

    <TextView
        android:id="@+id/code_error_prompt_tv"
        style="@style/textSize_redE90_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="6dp"
        android:text="@string/votify_code_err"
        android:visibility="gone" />

    <Button
        android:id="@+id/login_btn"
        style="@style/textSize_whitefff_17"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="38dp"
        android:background="@drawable/blue_btn_bg"
        android:enabled="false"
        android:text="@string/login" />

</LinearLayout>